新增了mapstruct和assembler
